[tool.poetry]
name = "knxproj"
version = "0.1.0"
description = "Interact with knx/gpa/... project files."
authors = ["fgoettel <fabian.goettel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
mypy = "^0.910"
pydocstyle = "^6.1.1"
pylint = "^2.9.5"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.9

[tool.pydocstyle]
ignore = [
    "D202",
    "D203",
    "D213",
    "D416",
]