[tool.poetry]
name = "projects"
version = "0.4.1" # Also update in projects/__init__.py AND logger
description = "Interact with ets/gpa/... project files."
authors = ["Fabian Göttel <fabian.goettel@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
defusedxml = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-bandit = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-isort = "*"
isort = "*"
mypy = "*"
nox-poetry = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-profiling = "*"
safety = "*"
sqlalchemy-stubs = "*"
toml = "*"
darglint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = [
    "test"
]

[tool.mypy]
python_version = "3.11"

[tool.isort]
profile = "black"

[tool.darglint]
docstring_style="numpy"

[tool.coverage]
source = ["projects"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "pytest.main([.-x.])",
]