load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@logger_deps//:dependencies.bzl", "dependency")

py_library(
    name = "util_py",
    srcs = ["util.py"],
)

py_library(
    name = "codegen_util_py",
    srcs = ["codegen/util.py"],
)

py_binary(
    name = "codegen_orm_py",
    srcs = ["codegen/gen_orm.py"],
    data = [":generate_dtype_matcher"],
    main = "codegen/gen_orm.py",
    deps = [
        ":codegen_util_py",
        ":util_py",
        dependency("xknx"),
        dependency("sqlalchemy"),
    ],
)

py_binary(
    name = "codegen_dtype_matcher",
    srcs = ["codegen/gen_dtype_matcher.py"],
    main = "codegen/gen_dtype_matcher.py",
    deps = [
        ":codegen_util_py",
        dependency("xknx"),
    ],
)

genrule(
    name = "generate_orm",
    outs = ["orm.py"],
    cmd = "./$(location :codegen_orm_py) --stdout_generated > \"$@\"",
    tools = [":codegen_orm_py"],
)

genrule(
    name = "generate_dtype_matcher",
    outs = ["dtype_matcher.py"],
    cmd = "./$(location :codegen_dtype_matcher) --stdout_generated > \"$@\"",
    tools = [":codegen_dtype_matcher"],
)
