load("//tools/pytest:defs.bzl", "py_pytest")
load("@logger_deps//:dependencies.bzl", "dependency")

py_pytest(
    name = "orm",
    srcs = ["test_orm.py"],
    deps = [
        "//logger/logger",
        "//logger/logger/codegen:gen_orm",
        dependency("xknx"),
        dependency("sqlalchemy"),
        dependency("pytest-asyncio"),
    ],
)

test_suite(
    name = "test",
    tests = [
        "orm",
    ],
)
