[tool.poetry]
name = "wgtnodestest"
version = "0.3.0"
description = "Test environment for the modbus part"
authors = ["fgoettel <fabian.goettel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pymodbus = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
